k8s-on-premise-cloud/ai-agent/automation-patching-security-misconfiguration/opa-rule/network/block-wildcard-ingress-rule.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockWildcardIngress
metadata:
  name: block-wildcard-ingress-rule
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io", "extensions"]
        kinds: ["Ingress"]
  parameters: {}
  validationFailureAction: enforce
